src/test/test_cases/invalid/syntaxErr/forLoop/emptyBrackets.wacc
# No declaration nor looping expression present

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  for () do
    println "What do you want to loop over?"
  done
end